ms2/errors.txt
ms3_prof.cpp: In function ‘int main(int, char**)’:
ms3_prof.cpp:92:17: error: ‘LineManager’ was not declared in this scope
   92 |                 LineManager lm(argv[4], theStations);
      |                 ^~~~~~~~~~~
ms3_prof.cpp:93:17: error: ‘lm’ was not declared in this scope; did you mean ‘tm’?
   93 |                 lm.display(cout);
      |                 ^~
      |                 tm
